--- a/about.html
+++ b/about.html
@@ -50,17 +50,71 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Purchase Gift Card</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                ...
+                                <form id="purchase-form" class="container mt-2 pb-2">
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="row g-3">
+                                                <div class="col-md-6 d-grid">
+                                                    <div class="modal-form-input">
+                                                        <label for="quantity" class="form-label">Quantity</label>
+                                                        <input type="number" class="form-control" id="quantity" min="1"
+                                                            placeholder="Enter quantity" required>
+                                                    </div>
+                                                    <div class="modal-form-input">
+                                                        <label for="cardholderName" class="form-label">Cardholder
+                                                            Name</label>
+                                                        <input type="text" class="form-control" id="cardholderName"
+                                                            placeholder="Enter cardholder name" required>
+                                                    </div>
+                                                    <div class="modal-form-input">
+                                                        <label for="cardNumber" class="form-label">Card Number</label>
+                                                        <input type="text" class="form-control" id="cardNumber"
+                                                            placeholder="XXXX-XXXX-XXXX-XXXX" maxlength="19"
+                                                            pattern="[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}" required>
+                                                    </div>
+                                                </div>
+
+                                                <div class="col-md-6 d-grid">
+                                                    <div class="modal-form-input">
+                                                        <label for="email" class="form-label">Email</label>
+                                                        <div class="input-group">
+                                                            <input type="email" class="form-control" id="email"
+                                                                placeholder="Email" required>
+                                                        </div>
+                                                    </div>
+                                                    <div class="modal-form-input">
+                                                        <label for="value" class="form-label">Card Value</label>
+                                                        <div class="input-group">
+                                                            <span class="input-group-text">€</span>
+                                                            <input type="number" min="5" step="5" class="form-control"
+                                                                id="value" placeholder="Enter value" required>
+                                                        </div>
+                                                    </div>
+                                                    <div class="modal-form-input">
+                                                        <label for="totalPrice" class="form-label">Total Price</label>
+                                                        <div class="input-group">
+                                                            <span class="input-group-text">€</span>
+                                                            <input type="text" class="form-control" id="totalPrice"
+                                                                disabled placeholder="Total price">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="modal-form-input align-self-end">
+                                                    <button type="submit"
+                                                        class="btn btn-primary w-100">Purchase</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
-                            </div>
+                        </div>
+                        <div class="modal-footer">
                         </div>
                     </div>
                 </div>
@@ -86,11 +140,12 @@
         <section>
             <div class="d-flex justify-content-center">
                 <h3 id="about-page-text" class="pt-5 text-center pb-5">
-                    Just north of Dublin, Swords combines historic charm with modern energy. Explore Swords Castle, scenic
+                    Just north of Dublin, Swords combines historic charm with modern energy. Explore Swords Castle,
+                    scenic
                     parks, and vibrant local culture—an ideal gateway to North County Dublin.
                 </h3>
             </div>
-            
+
             <div class="row justify-content-center">
                 <div class="d-flex justify-content-center col-9 col-md-4 mb-5">
                     <div class="about-card card bg-dark text-white">
@@ -129,20 +184,24 @@
         </section>
 
         <section>
-            <div class="d-flex justify-content-center">
+            <div class="d-flex align-items-center flex-column">
                 <h1>A heading about Swords</h1>
-            </div>
 
-            <h3 id="about-page-text" class="pt-5 text-center pb-5 col-10 col-md-9">
-                Over the past century, Swords has evolved from a small village with medieval roots into one of Ireland’s
-                fastest-growing urban areas. Once a modest rural settlement, Swords began expanding in the 20th century,
-                spurred by Dublin’s suburban growth and the development of Dublin Airport nearby. This strategic
-                location attracted businesses, residential developments, and improved infrastructure, turning Swords
-                into a bustling hub while preserving its historic landmarks. Today, Swords boasts a unique blend of
-                modern amenities and cultural heritage sites like Swords Castle and the ancient Round Tower, allowing
-                visitors to experience both the past and present. Its lively community, vibrant shopping areas, and
-                scenic parks make Swords a remarkable destination and a welcoming gateway to North County Dublin.
-            </h3>
+
+                <h3 id="about-page-text" class="pt-5 text-center pb-5">
+                    Over the past century, Swords has evolved from a small village with medieval roots into one of
+                    Ireland’s
+                    fastest-growing urban areas. Once a modest rural settlement, Swords began expanding in the 20th
+                    century,
+                    spurred by Dublin’s suburban growth and the development of Dublin Airport nearby. This strategic
+                    location attracted businesses, residential developments, and improved infrastructure, turning Swords
+                    into a bustling hub while preserving its historic landmarks. Today, Swords boasts a unique blend of
+                    modern amenities and cultural heritage sites like Swords Castle and the ancient Round Tower,
+                    allowing
+                    visitors to experience both the past and present. Its lively community, vibrant shopping areas, and
+                    scenic parks make Swords a remarkable destination and a welcoming gateway to North County Dublin.
+                </h3>
+            </div>
         </section>
 
         <section id="about-footer-image">
