--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h1 class="modal-title fs-5" id="exampleModalLabel">Purchase Gift Card</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
                                 <form id="purchase-form" class="container mt-2 pb-2">
@@ -62,42 +63,51 @@
                                                 <div class="col-md-6 d-grid">
                                                     <div class="modal-form-input">
                                                         <label for="quantity" class="form-label">Quantity</label>
-                                                        <input type="number" class="form-control" id="quantity" min="1" placeholder="Enter quantity" required>
+                                                        <input type="number" class="form-control" id="quantity" min="1"
+                                                            placeholder="Enter quantity" required>
                                                     </div>
                                                     <div class="modal-form-input">
-                                                        <label for="cardholderName" class="form-label">Cardholder Name</label>
-                                                        <input type="text" class="form-control" id="cardholderName" placeholder="Enter cardholder name" required>
+                                                        <label for="cardholderName" class="form-label">Cardholder
+                                                            Name</label>
+                                                        <input type="text" class="form-control" id="cardholderName"
+                                                            placeholder="Enter cardholder name" required>
                                                     </div>
                                                     <div class="modal-form-input">
                                                         <label for="cardNumber" class="form-label">Card Number</label>
-                                                        <input type="text" class="form-control" id="cardNumber" placeholder="XXXX-XXXX-XXXX-XXXX" maxlength="19" pattern="[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}" required>
+                                                        <input type="text" class="form-control" id="cardNumber"
+                                                            placeholder="XXXX-XXXX-XXXX-XXXX" maxlength="19"
+                                                            pattern="[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}" required>
                                                     </div>
                                                 </div>
-                        
+
                                                 <div class="col-md-6 d-grid">
                                                     <div class="modal-form-input">
                                                         <label for="email" class="form-label">Email</label>
                                                         <div class="input-group">
-                                                            <input type="email" class="form-control" id="email" placeholder="Email" required>
+                                                            <input type="email" class="form-control" id="email"
+                                                                placeholder="Email" required>
                                                         </div>
                                                     </div>
                                                     <div class="modal-form-input">
                                                         <label for="value" class="form-label">Card Value</label>
                                                         <div class="input-group">
                                                             <span class="input-group-text">€</span>
-                                                            <input type="number" min="5" step="5" class="form-control" id="value" placeholder="Enter value" required>
+                                                            <input type="number" min="5" step="5" class="form-control"
+                                                                id="value" placeholder="Enter value" required>
                                                         </div>
                                                     </div>
                                                     <div class="modal-form-input">
                                                         <label for="totalPrice" class="form-label">Total Price</label>
                                                         <div class="input-group">
                                                             <span class="input-group-text">€</span>
-                                                            <input type="text" class="form-control" id="totalPrice" disabled placeholder="Total price">
+                                                            <input type="text" class="form-control" id="totalPrice"
+                                                                disabled placeholder="Total price">
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="modal-form-input align-self-end">
-                                                    <button type="submit" class="btn btn-primary w-100">Purchase</button>
+                                                    <button type="submit"
+                                                        class="btn btn-primary w-100">Purchase</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -119,11 +129,13 @@
         <section id="hero-section" class="container-fluid d-flex">
             <div id="hero-text" class="col-lg-5  offset-1 col-7">
                 <h1 class="pt-2 ps-3">
-                    Come See Swords...
+                    Come And See Swords...
                 </h1>
                 <h3 class="pt-2 ps-3">
-                    Some subheading that is a bit longer
-                    </h2>
+                    Exploring Swords: From Ancient Heritage to Modern Living
+                </h3>
+                <h5 id="hero-gift-card-text" data-bs-toggle="modal" data-bs-target="#exampleModal" class="pt-1 ps-5">
+                    Purchase a Swords Village Gift Card >></h5>
             </div>
             <div id="scroller-arrow" class="d-flex align-items-end mb-2 fs-1">
                 <a href="#home-about-section"><i class="bi bi-chevron-double-down"></i></a>
@@ -147,10 +159,8 @@
                         <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">History</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of
-                                the card's content.</p>
-                            <a href="history.html" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">Discover Swords’ rich past, from ancient castles and heritage sites to tales of Ireland’s storied history woven into every corner.</p>
+                            <a href="history.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -159,10 +169,8 @@
                         <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Shopping</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of
-                                the card's content.</p>
-                            <a href="shopping.html" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">Explore shopping destinations in Swords, from high-street brands to local boutiques, offering something special for everyone.</p>
+                            <a href="shopping.html" class="btn btn-primary">Discover More</a>
                         </div>
                     </div>
                 </div>
@@ -171,10 +179,8 @@
                         <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Gift Card</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of
-                                the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">Treat someone to a memorable experience in Swords with gift cards for shopping, dining, and local attractions.</p>
+                            <a data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-primary">Get a Gift card</a>
                         </div>
                     </div>
                 </div>
@@ -183,7 +189,7 @@
         </section>
 
         <section class="d-flex flex-column text-center align-items-center">
-            <h1 class="mt-3">Contact</h1>
+            <h1 class="mt-3">Contact Us</h1>
             <form id="home-contact-form">
                 <div id="home-contact-form-inputs" class="d-flex mb-3">
                     <div id="home-personal-details-inputs" class="d-flex flex-column text-start me-3">
